public/stylesheets/codecademy/sunnyMenu.css
body, html {
    background: url(https://cdn.shopify.com/s/files/1/0189/3868/products/Whitewash_Brick_Preview.jpg?v=1419567488)no-repeat;
    background-size: 100% 125px;
    font-family: 'Playfair Display', serif;
}

body p {
    font-style: italic;
    font-size: 16px;
}

.main .container{
    background:#fff;
    z-index: 0;
    margin: -70px auto 80px;
    padding:80px 10px 80px 10px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
}

.header h1 {
    background: yellow;
    border-radius: 100%;
    box-shadow: 0 2px 5px rgba(0,0,0,0.25);
    height: 160px;
    margin: 60px auto 0;
    position: relative;
    text-align: center;
    width: 160px;
    z-index: 10;
    
}

.header h1 span {
    color:#fff;
    display: block;
    font-size: 40px;
    padding: 34px 0 0 0;
}

.header h1 span+span {
    color:#000;
    display: block;
    font-size: 28px;
    padding: 0;
}

h1 {
    color: #444;
    font-family: 'Oswald', sans-serif;
    font-size: 16px;
    margin: 20px 0 0 0;
    text-align: center;
    text-transform: uppercase;
}

h2 {
    border-bottom: 1px solid #444;
    color: #000;
    font-family: 'Oswald', sans-serif;
    margin: 20px 0 10px;
    padding: 0 0 10px 0;
    text-transform: uppercase;
}

h3 {
    color: #6699FF;
    font-family: 'Oswald', sans-serif;
    margin: 10px 0 5px;
    text-transform: uppercase;
}

.name{
    margin-top: 0px;
}

.price{
    font-family: 'Oswald', sans-serif;
    font-size: 20px;
    font-style: normal;
    margin: 26px 0 5px;
    text-align: right;
}

